fixed scrolling bug
large tables were causing a vertical scrollbar on both the table and page; fixed so that the page doesn't scroll to empty blue space

--- a/static_dev/css/graph.css
+++ b/static_dev/css/graph.css
@@ -90,6 +90,13 @@ td.graph-column, th.graph-column {
     flex-grow: 0
 }
 
+.card.page-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
 .controls {
     border-top: thin solid gray;
     display: flex;
