--- a/static_dev/css/results.css
+++ b/static_dev/css/results.css
@@ -90,4 +90,21 @@
     padding-left: 15px; 
     padding-right: 15px;
     overflow-x: auto;
+    flex: 1;
+    max-height: 800px;
+    overflow-y: auto;
+}
+
+.warm-content.page-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.section.page-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
